--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Europe/London
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Blog # the main title
+title: Iftekhar's Blog # the main title
 
 tagline: My Writeups and Blogposts # it will display as the subtitle
 
