--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone: Europe/London
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Iftekhar's Blog # the main title
+title: z3nxth # the main title
 
-tagline: My Writeups and Blogposts # it will display as the subtitle
+tagline: Writeups, blogposts, guides and more # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  My writeups, blogposts and more :)
+  Writeups, blogposts, guides and more
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
